--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,14 @@
 
 <h1>New article</h1>
 
+<%= simple_form_for(@article) do |f| %>
+  <%= f.input :title %>
+  <%= f.input :text %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
+  <%= f.submit %>
+<% end %>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', articles_path %>
