--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 
   <div id='main' role='main'>
 
-    <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/apple.jpg", :client_hints=>true, :transformation=>[{:width=>2000, :height=>1000, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
+    <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path( @article.photo.presence || "at/apple.jpg", :client_hints=>true, :transformation=>[{:width=>2000, :height=>1000, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
       <div>
          <h1 class='big fadeInRightBig animated'> <%=  @article.title %></h1>
       </div>
@@ -12,7 +12,7 @@
         <div id='main-content'>
           <div class='container'>
             <div class='row'>
-              <div class='col-md-push-9 col-sm-push-8 col-sm-4 col-md-3'>
+              <!-- <div class='col-md-push-9 col-sm-push-8 col-sm-4 col-md-3'>
                 <nav class='sidebar'>
                   <button class='btn btn-block btn-contrast sidebar-toggle' data-target='.sidebar-collapse' data-toggle='collapse' type='button'>
                     <span class='sr-only'>Toggle navigation</span>
@@ -37,7 +37,7 @@
 
 
 
-                    <!-- <div class='box social-box'>
+                    <div class='box social-box'>
                       <h3 class='title'>Latest tweets</h3>
                       <div class='icon-boxes icon-boxes-nowrap'>
                         <div class='icon-box'>
@@ -69,13 +69,14 @@
                           </div>
                         </div>
                       </div>
-                    </div> -->
+                    </div>
 
 
                   </div>
                 </nav>
-              </div>
-              <div class='col-md-pull-3 col-sm-pull-4 col-sm-8 col-md-9'>
+              </div> -->
+              <div class='col-sm-12'>
+              <!-- <div class='col-md-pull-3 col-sm-pull-4 col-sm-8 col-md-9'> -->
                 <div class='text-boxes'>
                   <div class='row text-box text-box-title-above text-box-big-image'>
                     <div class='col-sm-12'>
@@ -150,4 +151,5 @@
       </div>
 
     </div>
+    
 
