make banner images in mobile centered

--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,11 +1,24 @@
 
 <div id='main' role='main'>
+  
+  <div class="hidden-xs hidden-sm visiblr-md-* visible-lg-*">
 
-  <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/light-300431.jpg", :client_hints=>true, :transformation=>[{:width=>1700, :height=>850, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
-    
-    <div>
-       <h1 class='big fadeInRightBig animated'>Services</h1>
+    <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/light-300431.jpg", :client_hints=>true, :transformation=>[{:width=>1700, :height=>850, :dpr=>"auto", :gravity=>"south", :crop=>"fill"}]) %>');">
+      <div>
+         <h1 class='big fadeInRightBig animated'>Services</h1>
+      </div>
     </div>
+  
+  </div>
+  
+  <div class="hidden-md hidden-lg visible-xs-* visible-sm-*">
+
+    <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/light-300431.jpg", :client_hints=>true, :transformation=>[{:x=>1000, :y=>1500,:width=>3400, :height=>1700, :dpr=>"auto", :gravity=>"", :crop=>"crop"}]) %>');">
+      <div>
+         <h1 class='big fadeInRightBig animated'>Services</h1>
+      </div>
+    </div>
+  
   </div>
 
   <div id='main-content'>
