--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,13 +4,25 @@
 
         <!-- <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path 'at/london.jpg'%>');"> -->
 
-        <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/london.jpg", :client_hints=>true, :transformation=>[{:width=>1700, :height=>850, :dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
-          <div>
-             <h1 class='big fadeInRightBig animated'>About us</h1>
+        <div class="hidden-xs hidden-sm visiblr-md-* visible-lg-*">
+      
+          <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/london.jpg", :client_hints=>true, :transformation=>[{:width=>1700, :height=>850, :dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
+            <div>
+               <h1 class='big fadeInRightBig animated'>About us</h1>
+            </div>
           </div>
+        
         </div>
-
-
+        
+        <div class="hidden-md hidden-lg visible-xs-* visible-sm-*">
+      
+          <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/london.jpg", :client_hints=>true, :transformation=>[{:x=>1000, :y=>200,:width=>3400, :height=>1700, :dpr=>"auto", :gravity=>"", :crop=>"crop"}]) %>');">
+            <div>
+               <h1 class='big fadeInRightBig animated'>About us</h1>
+            </div>
+          </div>
+        
+        </div>
 
         <div class='row'>
           <div class='col-sm-12'>
