--- a/app/views/pages/media.html.erb
+++ b/app/views/pages/media.html.erb
@@ -1,11 +1,16 @@
 
       <div id='main' role='main'>
-
-      <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/blurry.jpg", :client_hints=>true, :transformation=>[{:width=>1700, :height=>850, :dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
-        <div>
-           <h1 class='big fadeInRightBig animated'>Media</h1>
+      
+      <div class="">
+    
+        <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/blurry.jpg", :client_hints=>true, :transformation=>[{:width=>1700, :height=>850, :dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
+          <div>
+             <h1 class='big fadeInRightBig animated'>Media</h1>
+          </div>
         </div>
+      
       </div>
+    
       
       <div id='main-content'>
         <div class='container'>
@@ -46,7 +51,7 @@
 
                         </div>
                         <div class='col-sm-9'>
-                          <p>Olivia Cockburn joined Susanna Reid and Bill Turnball on the BBC1 breakfast show to discuss the release of AD 61, a short film in Latin for which she was language consultant and script translator. Also discussed was Latin and its role in the 21st century. </p>
+                          <p>Olivia Cockburn joined Susanna Reid and Bill Turnbull on the BBC1 breakfast show to discuss the release of AD 61, a short film in Latin for which she was language consultant and script translator. Also discussed was Latin and its role in the 21st century. </p>
 
                         </div>
                       </div>
