--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -17,7 +17,7 @@
   
       <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path( @article.photo.presence || "at/apple.jpg", :client_hints=>true, :transformation=>[{:x=>1000, :y=>200,:width=>3400, :height=>1700, :dpr=>"auto", :gravity=>"", :crop=>"crop"}]) %>');">
         <div>
-           <h1 class='big fadeInRightBig animated'><%=  @article.title %></h1>
+           <p class=''><%= @article.title %></p>
         </div>
       </div>
     
