--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -41,7 +41,7 @@
               <div class='row text-box text-box-title-above'>
                 <div class='col-sm-12'>
                   <h2>
-                  <%= link_to article.title.capitalize, article_path(article), class: '', style:'text-decoration: none' %>
+                  <%= link_to article.title, article_path(article), class: '', style:'text-decoration: none' %>
                   </h2>
                   <div class='toolbar'>
                     <div class='btn btn-link'>
