--- a/app/assets/stylesheets/jednotka/docs.scss
+++ b/app/assets/stylesheets/jednotka/docs.scss
@@ -667,3 +667,69 @@
     }
   }
 }
+
+#main-content-no-padding {
+  width: 100%;
+  margin-left: 250px;
+  max-width: 1000px;
+  padding: 0 30px 0 30px;
+
+  .doc-title {
+    margin: 0;
+    padding: 0 0 30px 0;
+  }
+
+  .doc-help, .doc-example {
+    margin-bottom: 20px;
+  }
+
+  h1.doc-title {
+    font-size: 52px;
+    line-height: 1.5;
+    padding-top: 15px;
+  }
+
+  h2.doc-title {
+    font-size: 42px;
+    line-height: 1.5;
+  }
+
+  h3.doc-title {
+    font-size: 32px;
+    line-height: 1.5;
+  }
+
+  h4.doc-title {
+    font-size: 22px;
+    line-height: 1.5;
+  }
+
+  > section {
+    border-bottom: 2px solid $contrast;
+    padding-bottom: 30px;
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+
+  section {
+    .syntaxhighlighter {
+      margin: 0 !important;
+      border: 2px solid $panel-border-color;
+
+      .gutter .line {
+        border-right-color: $contrast !important;
+      }
+
+      .toolbar {
+        display: none;
+      }
+    }
+  }
+
+  .alert {
+    padding: 5px 10px;
+  }
+}
+}
