adjust small layout show article

--- a/app/assets/stylesheets/components/_linkedin.scss
+++ b/app/assets/stylesheets/components/_linkedin.scss
@@ -1,6 +1,6 @@
 .prose {
 
-font-family: Source Serif Pro, serif !important;
+// font-family: Source Serif Pro, serif !important;
 line-height: 32px !important;
 font-weight: 400 !important;
 font-size: 21px !important;
