--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,7 +22,7 @@
           <div class='container'>
             <div class='row'>
       
-              <div class='col-sm-12'>
+              <div class='col-xs-12 col-sm-push-1 col-sm-10'>
     
                 <div class=''>
                   <div class='row text-box-title-above text-box-big-image'>
