--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,46 @@
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
 
     <!-- metadata -->
-    <title><%= meta_title %></title>
-    <meta name="description" content="<%= meta_description %>">
+    
+    <% if @article %>
+    
+      <!-- Google+ Schema.org markup -->
+      <meta itemprop="name" content="<%= meta_blog_title %>">
+      <meta itemprop="title" content="<%= meta_blog_title %>">
+      <meta itemprop="description" content="<%= meta_blog_description %>">
+      <meta itemprop="image" content="<%= cl_image_tag(@article.photo.presence || "at/apple.jpg", 
+          :client_hints=>true, 
+          :transformation=>[{:height => 180, :width => 300, :dpr=>"auto", :gravity=>"", :crop=>"fill"}], 
+          :class => "img-responsive center-block img-rounded-half" ) %>">
+          
+      <!-- Twitter Card data -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:site" content="<%= DEFAULT_META['twitter_account'] %>">
+      <meta name="twitter:title" content="<%= meta_blog_title %>">
+      <meta name="twitter:description" content="<%= meta_blog_description %>">
+      <meta name="twitter:creator" content="<%= DEFAULT_META['twitter_account'] %>">
+      <meta name="twitter:image:src" content="<%= cl_image_tag(@article.photo.presence || "at/apple.jpg", 
+          :client_hints=>true, 
+          :transformation=>[{:height => 180, :width => 300, :dpr=>"auto", :gravity=>"", :crop=>"fill"}], 
+          :class => "img-responsive center-block img-rounded-half" ) %>">
+    
+    <% else %>
+    
+      <!-- Google+ Schema.org markup -->
+      <meta itemprop="name" content="<%= meta_title %>">
+      <meta itemprop="title" content="<%= meta_title %>">
+      <meta itemprop="description" content="<%= meta_description %>">
+      <meta itemprop="image" content="<%= image_url(meta_image) %>">
+      
+      <!-- Twitter Card data -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:site" content="<%= DEFAULT_META['twitter_account'] %>">
+      <meta name="twitter:title" content="<%= meta_title %>">
+      <meta name="twitter:description" content="<%= meta_description %>">
+      <meta name="twitter:creator" content="<%= DEFAULT_META['twitter_account'] %>">
+      <meta name="twitter:image:src" content="<%= image_url(meta_image) %>">
+    
+    <% end %>  
 
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="<%= meta_title %>" />
@@ -27,20 +65,6 @@
     <meta property="og:image" content="<%= image_url(meta_image) %>" />
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
-
-    <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="<%= DEFAULT_META['twitter_account'] %>">
-    <meta name="twitter:title" content="<%= meta_title %>">
-    <meta name="twitter:description" content="<%= meta_description %>">
-    <meta name="twitter:creator" content="<%= DEFAULT_META['twitter_account'] %>">
-    <meta name="twitter:image:src" content="<%= image_url(meta_image) %>">
-
-    <!-- Google+ Schema.org markup -->
-    <meta itemprop="name" content="<%= meta_title %>">
-    <meta itemprop="description" content="<%= meta_description %>">
-    <meta itemprop="image" content="<%= image_url(meta_image) %>">
-
 
   </head>
   <body>
