fix bug @article in application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
     <!-- metadata -->
     
-    <% if true #@article %>
+    <% if @article %>
     
       <!-- Google+ Schema.org markup -->
       <meta itemprop="name" content="<%= meta_blog_title %>">
