--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,16 @@
       <meta name="twitter:site" content="<%= DEFAULT_META['twitter_account'] %>">
       <meta name="twitter:title" content="<%= meta_blog_title %>">
       <meta name="twitter:creator" content="<%= DEFAULT_META['twitter_account'] %>">
-      <meta itemprop="image" content="<%= cl_image_tag(meta_blog_image)%>">    
+      <meta itemprop="image" content="<%= cl_image_tag(meta_blog_image)%>">   
+      
+      <!-- Facebook Open Graph data -->
+      <meta property="og:title" content="<%= meta_blog_title %>" />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="<%= request.original_url %>" />
+      <meta property="og:image" content="<%= image_url(meta_blog_image) %>" />
+      <meta property="og:description" content="<%= meta_blog_title %>" />
+      <meta property="og:site_name" content="<%= meta_blog_title %>" />
+       
     <% else %>
     
       <!-- Google+ Schema.org markup -->
@@ -46,16 +55,16 @@
       <meta name="twitter:description" content="<%= meta_description %>">
       <meta name="twitter:creator" content="<%= DEFAULT_META['twitter_account'] %>">
       <meta name="twitter:image:src" content="<%= image_url(meta_image) %>">
+      
+      <!-- Facebook Open Graph data -->
+      <meta property="og:title" content="<%= meta_title %>" />
+      <meta property="og:type" content="website" />
+      <meta property="og:url" content="<%= request.original_url %>" />
+      <meta property="og:image" content="<%= image_url(meta_image) %>" />
+      <meta property="og:description" content="<%= meta_description %>" />
+      <meta property="og:site_name" content="<%= meta_title %>" />
     
     <% end %>  
-
-    <!-- Facebook Open Graph data -->
-    <meta property="og:title" content="<%= meta_title %>" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="<%= request.original_url %>" />
-    <meta property="og:image" content="<%= image_url(meta_image) %>" />
-    <meta property="og:description" content="<%= meta_description %>" />
-    <meta property="og:site_name" content="<%= meta_title %>" />
 
   </head>
   <body>
