--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       <meta property="og:type" content="website" />
       <meta property="og:url" content="<%= request.original_url %>" />
       <meta property="og:image" content="<%= image_url(meta_blog_image) %>" />
-      <meta property="og:description" content="<%= meta_blog_title %>" />
+      <meta property="og:description" content="<%= meta_blog_description %>" />
       <meta property="og:site_name" content="<%= meta_blog_title %>" />
        
     <% else %>
