--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
       <meta property="og:url" content="<%= request.original_url %>" />
       <meta property="og:image" content="<%= image_url(meta_blog_image) %>" />
       <meta property="og:description" content="<%= meta_blog_description %>" />
-      <meta property="og:site_name" content="<%= meta_blog_title %>" />
+      <meta property="og:site_name" content="<%= meta_title %>" />
        
     <% else %>
     
