--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
       <meta itemprop="image" content="<%= cl_image_tag(meta_blog_image)%>">   
       
       <!-- Facebook Open Graph data -->
-      <meta property="og:title" content="<%= meta_blog_title %>" />
+      <meta property="og:title" content="<%= meta_title %>" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="<%= request.original_url %>" />
       <meta property="og:image" content="<%= image_url(meta_blog_image) %>" />
