--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <% if @article %>
     
       <!-- Google+ Schema.org markup -->
-      <meta itemprop="name" content="<%= meta_blog_title %>">
+      <meta itemprop="name" content="<%= meta_title %>">
       <meta itemprop="title" content="<%= meta_blog_title %>">
       <meta itemprop="image" content="<%= cl_image_tag(meta_blog_image)%>">
           
