Modify gem file and http to https links

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -1,6 +1,6 @@
 /* -------------------------------------
  * Bootstrap sass variable
- * (see http://getbootstrap.com/customize/#less-variables)
+ * (see https://getbootstrap.com/customize/#less-variables)
  * ------------------------------------- */
 
 // General style
@@ -11,7 +11,7 @@ $line-height-base:        $base-height;
 $headings-font-family:    $header-font;
 
 // Semantic color scheme
-// => http://getbootstrap.com/customize/#colors
+// => https://getbootstrap.com/customize/#colors
 $gray-base:       $gray;
 $brand-primary:   $blue;
 $brand-success:   $green;
