--- a/app/assets/stylesheets/jednotka/_jednotka.scss
+++ b/app/assets/stylesheets/jednotka/_jednotka.scss
@@ -1,6 +1,6 @@
 /**
  * Name: Jednotka - Multipurpose Website HTML Template
- * Author: http://themeforest.net/user/BublinaStudio
+ * Author: https://themeforest.net/user/BublinaStudio
  * Version: 1.8
 **/
 
