--- a/app/assets/stylesheets/jednotka/theme/structure/_typography.scss
+++ b/app/assets/stylesheets/jednotka/theme/structure/_typography.scss
@@ -1,8 +1,8 @@
 /*------------------------------------*\
     $TYPOGRAPHY
 \*------------------------------------*/
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,400,300,500);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,500);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
 
 body {
   font-family: $font-family-base;
