--- a/app/views/pages/bbc.html.erb
+++ b/app/views/pages/bbc.html.erb
@@ -82,32 +82,32 @@
                       <ul class='list-unstyled list-inline image-list-box'>
                         <li>
                           <a href='#'>
-                            <img alt="Jednotka" width="50" height="50" src="http://placehold.it/50x50" />
+                            <img alt="Jednotka" width="50" height="50" src="https://placehold.it/50x50" />
                           </a>
                         </li>
                         <li>
                           <a href='#'>
-                            <img alt="Jednotka" width="50" height="50" src="http://placehold.it/50x50" />
+                            <img alt="Jednotka" width="50" height="50" src="https://placehold.it/50x50" />
                           </a>
                         </li>
                         <li>
                           <a href='#'>
-                            <img alt="Jednotka" width="50" height="50" src="http://placehold.it/50x50" />
+                            <img alt="Jednotka" width="50" height="50" src="https://placehold.it/50x50" />
                           </a>
                         </li>
                         <li>
                           <a href='#'>
-                            <img alt="Jednotka" width="50" height="50" src="http://placehold.it/50x50" />
+                            <img alt="Jednotka" width="50" height="50" src="https://placehold.it/50x50" />
                           </a>
                         </li>
                         <li>
                           <a href='#'>
-                            <img alt="Jednotka" width="50" height="50" src="http://placehold.it/50x50" />
+                            <img alt="Jednotka" width="50" height="50" src="https://placehold.it/50x50" />
                           </a>
                         </li>
                         <li>
                           <a href='#'>
-                            <img alt="Jednotka" width="50" height="50" src="http://placehold.it/50x50" />
+                            <img alt="Jednotka" width="50" height="50" src="https://placehold.it/50x50" />
                           </a>
                         </li>
                       </ul>
@@ -170,7 +170,7 @@
                       <div class='row'>
                         <div class='col-sm-12'>
                           <a href='blog_single_post.html'>
-                            <img class="img-responsive center-block img-rounded-half" alt="Cras tempus ligula a tempor adipiscing" width="848" height="364" src="http://placehold.it/848x364" />
+                            <img class="img-responsive center-block img-rounded-half" alt="Cras tempus ligula a tempor adipiscing" width="848" height="364" src="https://placehold.it/848x364" />
                           </a>
                         </div>
                         <div class='col-sm-12'>
@@ -194,7 +194,7 @@
                       <div class='author-box'>
                         <div class='row'>
                           <div class='col-sm-3 col-lg-2'>
-                            <img alt="Author" width="165" height="165" class="img-circle img-responsive center-block" src="http://placehold.it/165x165" />
+                            <img alt="Author" width="165" height="165" class="img-circle img-responsive center-block" src="https://placehold.it/165x165" />
                           </div>
                           <div class='col-sm-9 col-lg-10'>
                             <h3 class='title'>About author</h3>
@@ -249,7 +249,7 @@
                           </div>
                           <div class='media'>
                             <div class='pull-left'>
-                              <img class="media-object" width="60" height="60" alt="Jessica Doe" src="http://placehold.it/60x60" />
+                              <img class="media-object" width="60" height="60" alt="Jessica Doe" src="https://placehold.it/60x60" />
                             </div>
                             <div class='media-body'>
                               <div class='content staff'>
