--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -56,7 +56,7 @@
                   <%= Date.today.year %> by
                 </p>
                 <div>
-                  <a href="http://newwaves.design/">
+                  <a href="https://newwaves.design/">
                    <p class='copyright '>
                     &nbspNew Waves Design
                     </p>
