--- a/app/assets/stylesheets/jednotka/plugins/nivo_lightbox/_nivo-lightbox.scss
+++ b/app/assets/stylesheets/jednotka/plugins/nivo_lightbox/_nivo-lightbox.scss
@@ -1,10 +1,10 @@
 /*
  * Nivo Lightbox Default Theme v1.0
- * http://dev7studios.com/nivo-lightbox
+ * https://dev7studios.com/nivo-lightbox
  *
  * Copyright 2013, Dev7studios
  * Free to use and abuse under the MIT license.
- * http://www.opensource.org/licenses/mit-license.php
+ * https://www.opensource.org/licenses/mit-license.php
  */
 
 .nivo-lightbox-theme-default.nivo-lightbox-overlay {
@@ -99,11 +99,11 @@
 
 /*
  * Nivo Lightbox v1.0
- * http://dev7studios.com/nivo-lightbox
+ * https://dev7studios.com/nivo-lightbox
  *
  * Copyright 2013, Dev7studios
  * Free to use and abuse under the MIT license.
- * http://www.opensource.org/licenses/mit-license.php
+ * https://www.opensource.org/licenses/mit-license.php
  */
 
 .nivo-lightbox-overlay {
