--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -56,9 +56,9 @@
                   <%= Date.today.year %> by
                 </p>
                 <div>
-                  <a href="https://newwaves.design/">
+                  <a href="https://oromi.me/">
                    <p class='copyright '>
-                    &nbspNew Waves Design
+                    &nbspOromi
                     </p>
                   </a>
 
@@ -74,6 +74,19 @@
                     <i class='fa fa-facebook text-dark'></i>
                   </a>
                 </div>
+
+                <div class='row'>
+                  <div class='col-lg-push-2 col-md-push-2 col-lg-4'>
+                    <div>
+                      <a href="https://res.cloudinary.com/georgestam/image/upload/v1546541960/at/Academia_Translations_-_Privacy_Cookies_Policy_NEW_v2.pdf">
+                       <p class='copyright'>
+                        &nbspPrivacy Policy
+                        </p>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
