--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,28 +2,28 @@
   <div id='main' role='main'>
 
     <div class="hidden-xs hidden-sm visiblr-md-* visible-lg-*">
-  
+
       <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path( @article.photo.presence || "at/apple.jpg", :client_hints=>true, :transformation=>[{:width=>1700, :height=>850, :dpr=>"auto", :gravity=> @article.gravity, :crop=>"fill"}]) %>');">
       </div>
-    
+
     </div>
-    
+
     <div class="hidden-md hidden-lg visible-xs-* visible-sm-*">
-  
+
       <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path( @article.photo.presence || "at/apple.jpg", :client_hints=>true, :transformation=>[{:x=>@article.x_mobil, :y=>@article.y_mobil,:width=>3400, :height=>1700, :dpr=>"auto", :gravity=>"", :crop=>"crop"}]) %>');">
         <div>
-           
+
         </div>
       </div>
-    
+
     </div>
 
         <div id='main-content-no-padding'>
           <div class='container'>
             <div class='row'>
-      
+
               <div class='col-xs-12 col-sm-push-1 col-sm-10'>
-    
+
                 <div class=''>
                   <div class='row text-box-title-above text-box-big-image'>
                     <div class='col-sm-12'>
@@ -32,11 +32,11 @@
                         <%= @article.title %>
 
                       </h1>
-                      
+
                       <p> <span> Published on <%= @article.created_at.strftime("%B %d %Y") %> </span>
-                      
+
                       <hr style= "margin-bottom:10px">
-                      
+
                       <div class='row'>
                         <div class='col-sm-10 col-lg-2'>
 
@@ -44,13 +44,13 @@
                         </div>
                         <div class='col-sm-12 col-lg-10'>
                           <p class=''><strong> Olivia Cockburn </strong></p>
-                          <p> <span> Academia Translations Director, MA, MA, PhD, MCIL, MITI </span>
+                          <p> <span> Academia Translations Director, MA, MA, PhD, MCIL, MITI, CL </span>
                           </p>
                         </div>
                       </div>
-                
+
                       <hr>
-                      
+
                       <div class='row'>
                   </div>
                   <div class='row'>
@@ -70,7 +70,7 @@
                           </div>
                           <div class='col-sm-9 col-lg-10'>
                             <h3 class='title'>About the author</h3>
-                            <p>  Olivia Cockburn has a BA Hons First Degree in Spanish, Latin and Portuguese, Olivia then headed to Spain for her postgraduate training. She completed a Masters Degree in Latin and Spanish Linguistics before moving on to a PhD in Bilingualism and Translation, specialising in Ancient Languages and Romance Linguistics. Whilst researching and lecturing at the Universidad Autónoma de Madrid, Olivia became a Chartered Linguist and full member of the Institute of Translation and Interpreting before deciding to set up Academia Translations.</p>
+                            <p>  Olivia Cockburn has a BA Hons First Degree in Spanish, Latin and Portuguese, Olivia then headed to Spain for her postgraduate training. She completed a Masters Degree in Latin and Spanish Linguistics before moving on to a PhD in Bilingualism and Translation, specialising in Ancient Languages and Romance Linguistics. Whilst researching and lecturing at the Universidad Autónoma de Madrid, Olivia became a Chartered Linguist and full member of the Institute of Translation and Interpreting before deciding to set up Academia Translations. She also currently lectures in Scientific and Technical Translation at Imperial College, London. </p>
                           </div>
                         </div>
                       </div>
@@ -91,5 +91,3 @@
       </div>
 
     </div>
-    
-
