--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,23 +5,23 @@
         <!-- <div class="banner-small" style="background-image: linear-gradient(-210deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.3) 50%), url('<%= image_path 'at/london.jpg'%>');"> -->
 
         <div class="hidden-xs hidden-sm visiblr-md-* visible-lg-*">
-      
+
           <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/london.jpg", :client_hints=>true, :transformation=>[{:width=>1700, :height=>850, :dpr=>"auto", :gravity=>"", :crop=>"fill"}]) %>');">
             <div>
                <h1 class='big fadeInRightBig animated'>About us</h1>
             </div>
           </div>
-        
+
         </div>
-        
+
         <div class="hidden-md hidden-lg visible-xs-* visible-sm-*">
-      
+
           <div class="banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.0) 0%, rgba(0,36,61,0.2) 50%), url('<%= cl_image_path("at/london.jpg", :client_hints=>true, :transformation=>[{:x=>1000, :y=>200,:width=>3400, :height=>1700, :dpr=>"auto", :gravity=>"", :crop=>"crop"}]) %>');">
             <div>
                <h1 class='big fadeInRightBig animated'>About us</h1>
             </div>
           </div>
-        
+
         </div>
 
         <div class='row'>
@@ -44,7 +44,7 @@
                     <div class='col-sm-4'>
                       <h3 class='name'>Olivia Cockburn</h3>
                       <h4 class='position'>Director</h4>
-                      <p> MA, MA, PhD, MCIL, MITI </p>
+                      <p> MA, MA, PhD, MCIL, MITI, CL </p>
                       <div class='links'>
                         <a class='btn btn-medium-light btn-sm btn-circle' href='https://uk.linkedin.com/in/olivia-cockburn-5662a122/en'>
                           <i class='fa fa-linkedin'></i>
@@ -68,10 +68,10 @@
                 <div class='row'>
                   <div class='col-sm-12'>
                     <p class='lead lead-xs'>
-                    Academia Translations was founded in 2012 by Olivia Cockburn (MA, MA, PhD, MCIL, MITI).
+                    Academia Translations was founded in 2012 by Olivia Cockburn (MA, MA, PhD, MCIL, MITI, CL).
                      <br/> <br/>
 
-                    With a BA Hons First Degree in Spanish, Latin and Portuguese, Olivia then headed to Spain for her postgraduate training. She completed a Masters Degree in Latin and Spanish Linguistics before moving on to a PhD in Bilingualism and Translation, specialising in Ancient Languages and Romance Linguistics. Whilst researching and lecturing at the Universidad Autónoma de Madrid, Olivia became a Chartered Linguist and full member of the Institute of Translation and Interpreting before deciding to set up Academia Translations. <br/> <br/>
+                    With a BA Hons First Degree in Spanish, Latin and Portuguese, Olivia then headed to Spain for her postgraduate training. She completed a Masters Degree in Latin and Spanish Linguistics before moving on to a PhD in Bilingualism and Translation, specialising in Ancient Languages and Romance Linguistics. Whilst researching and lecturing at the Universidad Autónoma de Madrid, Olivia became a Chartered Linguist and full member of the Institute of Translation and Interpreting before deciding to set up Academia Translations. She also currently lectures in Scientific and Technical Translation at Imperial College, London.  <br/> <br/>
 
                     With a passion for detail, Olivia heads all translation projects and ensures that they are of the highest possible quality. <br/> <br/>
 
